[package]
authors = ["ololoshka2871"]
edition = "2021"
readme = "README.md"
name = "sersor-probe"
version = "0.2.0"
resolver = "2"

[dependencies]
num = { version = "0.4", default-features = false }
libm = "0.2"
vcell = "0.1.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
nb = "1"
tbytes = "0.1.0-alpha2"
embedded-alloc = "0.5.1"
static_assertions = "1"
micromath = "2"
byteorder = { version = "1.4", default-features = false }
heapless = "0.8"

embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

usb-device = { version = "0.2.9", features = ["defmt", "control-buffer-256"] }
stm32-usbd = "0.6.0"
usbd-serial = "0.1.1"
usbd-hid = { version = "0.6.1", features = ["defmt"] }
usbd-hid-macros = "0.6.0"

panic-probe = { version = "0.3", features = ["print-defmt"] }

stm32f1xx-hal = { version = "0.10.0", features = ["rt"], optional = true }
stm32-device-signature = "0.3"

cortex-m-rtic = { version = "1.1" }
systick-monotonic = "1.0.1"

# modbus
modbus-core = { path = "modbus-core", default-features = false, features = ["rtu"] }

# display
display-interface = "0.4"
display-interface-spi = "0.4"
ssd1309 = "0.4"
embedded-graphics = "0.8"

# defmt
defmt = "0.3"
defmt-macros = "0.3"
defmt-rtt = "0.4"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
opt-level = "z"
codegen-units = 1 # better optimizations
lto = false
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true      # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = true

[features]
default = ["stm32f103cb"]

stm32f1xx = []
stm32f103cb = ["stm32f103"]
stm32f103 = [
  "stm32f1xx-hal/stm32f103",
  "stm32f1xx-hal/medium",
  "stm32-device-signature/stm32f1",
  "stm32f1xx",
]
